# vitsae

./: .gitignore  README.md  commands.sh  kill.sh  todo
scripts/: aiohttp_profile.py  clonewandb.py  count.py  deploy.sh  destroydeploy.sh  load_secrets.sh  pad.ipynb  profile.py  pull_to_hf.py  show_finished.py  sorteval.py  split_parquet.py  symptom.ipynb  test.sh  updatewandb.py
terraform/: main.tf  outputs.tf  terraform.tfvars  user_data.sh.tpl  variables.tf
terraform/modules/ecs_cluster/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/s3_bucket/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/sqs_queue/: main.tf  outputs.tf  terraform.tfvars  variables.tf
tfecr/: ecr.tf  ecr_outputs.tf  main.tf  outputs.tf  variables.tf
vitact/: .dockerignore  Dockerfile  Dockerfile.activations  Dockerfile.training  activations.sh  build_configs.py  entrypoint.sh  main.py  pull.py  pyproject.toml  symptom.ipynb  tardataset.py  test_tardataset.py  top9.py  train.py  train.sh  vpcgateway.sh
vitact/test/: test_tardataset.py  test_train.py
vitact/test/tars/: 00001-1200-1500.70.ready.tar  00001-4800-5100.70.ready.tar
vitact/vitact/: build_configs.py  download.py  filedataset.py  generate.py  main.py  multilayer.sh  pull.py  repopulate_queue.py  sachetrain.py  tardataset.py  test_tardataset.py  top9.py  train.py
vitsae/: .dockerignore  Dockerfile  activations.py  add_to_queue.py  constants.py  generatewds.py  interruption.py  load_secrets.sh  main.py  pyproject.toml  test_activations.py  test_generatewds.py  test_interruption.py  test_uploadwds.py  uploadwds.py  utils.py
vitsae/test/laion_files/: 00001-900-1200--901.json  00001-900-1200--903.json  00001-900-1200--904.json  00001-900-1200--907.json  00001-900-1200--909.json  00001-900-1200--910.json  00001-900-1200--911.json  00001-900-1200--912.json  00001-900-1200--913.json  00001-900-1200--914.json  00001-900-1200--915.json  00001-900-1200--916.json  00001-900-1200--918.json  00001-900-1200--919.json  00001-900-1200--920.json  00001-900-1200--921.json  00001-900-1200--922.json  00001-900-1200--924.json  00001-900-1200--925.json  00001-900-1200--927.json  00001-900-1200--930.json  00001-900-1200--934.json  00001-900-1200--935.json  00001-900-1200--936.json  00001-900-1200--937.json  00001-900-1200--939.json  00001-900-1200--940.json  00001-900-1200--941.json  00001-900-1200--942.json  00001-900-1200--943.json
vitsae/test/parquet/: sample.parquet
