[tool.poetry]
name = "vitact"
version = "0.1.0"
description = ""
authors = ["Louka Ewington-Pitsos <lewingtonpitsos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sache = {git = "https://github.com/lewington-pitsos/sache.git", rev="84e42963681b57d958d6aa3e10f7eb4ee3a61071"}
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
