[tool.poetry]
name = "vitact"
version = "0.1.0"
description = ""
authors = ["Louka Ewington-Pitsos <lewingtonpitsos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sache = {git = "https://github.com/lewington-pitsos/sache.git"}
pillow = "^10.4.0"
img2dataset = "^1.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
