[tool.poetry]
name = "generate"
version = "0.1.0"
description = ""
authors = ["Louka Ewington-Pitsos <lewingtonpitsos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.28"
python-terraform = "^0.10.1"
requests = "^2.32.3"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
pytest = "^8.3.3"
aiohttp = "^3.10.7"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
